Modificado el estilo de la plataforma v1.

--- a/prototipo-1/client/client.html
+++ b/prototipo-1/client/client.html
@@ -3,10 +3,11 @@
 </head>
 
 <body>
-	
+	{{loginButtons align='right'}}
 	<h1>Plataforma LL</h1>
 	{{> welcome}}
-	{{loginButtons align='right'}}
+	<IMG id = "imagen" SRC="angrybirds.jpg">
+	
 </body>
 
 <template name="welcome">
