--- a/client/client.html
+++ b/client/client.html
@@ -51,6 +51,15 @@
 				</div>
 				<!-- END: Header -->
 
+				<!-- BEGIN: Chat Global -->
+
+				<div id="gbl_chat">
+ 	  				{{> msgs_gbl}}
+  					{{> input}}
+  				</div>
+
+				<!-- END: Chat Global -->
+
 			</div>
 		</div>
 	</div>
@@ -72,4 +81,25 @@
 	<!-- END: Footer -->
 </body>
 
+<!-- BEGIN: Template -->
 
+	<!-- Begin: Templates Chat global -->
+<template name="msgs_gbl">
+  	<h1>Chat global</h1>
+  	<div id="msgs">
+  		{{#each msgs}}
+  			<p class="users"> {{user}}:</p> <p class="msg"> {{msg}}</p> <br>
+  		{{/each}}
+	</div>
+</template>
+
+<template name="input">
+	<div id="wr_msg">
+		Mensaje: <input type="text" id="msg">
+		<input type="button" id="sendmsg" value="Enviar">
+	</div>
+</template>
+	<!-- End: Templates Chat -->
+
+
+<!-- END: Templates -->
