v2 html general chat

--- a/client/client.html
+++ b/client/client.html
@@ -50,17 +50,20 @@
 
 				</div>
 				<!-- END: Header -->
-
-				<!-- BEGIN: Chat Global -->
-
-				<div id="gbl_chat">
- 	  				{{> msgs_gbl}}
-  					{{> input}}
-  				</div>
-
-				<!-- END: Chat Global -->
-
 			</div>
+
+			<!-- BEGIN: Body -->
+
+			<!-- BEGIN: Chat Global -->
+			<div id="gbl-chat">
+ 	  			{{> msgs_gbl}}
+  				{{> input}}
+  			</div>
+			<!-- END: Chat Global -->
+
+			<!-- END: Body -->
+
+			
 		</div>
 	</div>
 
