Añadido los helpers para main-menu y torneos

--- a/client/client.html
+++ b/client/client.html
@@ -38,13 +38,7 @@
 					<a href="" id="logo"> <img src="images/logo.png" width="283"
 						height="66" alt="ISI Pakistan" /></a>
 
-					<ul class="main-menu">
-						<li class="current"><a href="">Casa</a></li>
-						<li><a href="">Clan</a></li>
-						<li><a href="#">Ranking</a></li>
-						<li><a href="#">other</a></li>
-						<li><a href="">stuff</a></li>
-					</ul>
+					{{> main_menu}}
 
 					<div id="header-graphic"></div>
 
@@ -63,6 +57,10 @@
 
 			<!-- END: Body -->
 
+			
+			{{> torneos}}
+			
+			
 			
 		</div>
 	</div>
