--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Pruebas Clarcasone</title>
   <link rel="stylesheet" href="base.css" type="text/css" />
   <script src='jquery-1.10.2.js' type='text/javascript'></script>
-
+  <script src='underscore.js' type='text/javascript'></script>
 </head>
 <body>
   <div id='container'>
