--- a/prototipo-1/client/client.html
+++ b/prototipo-1/client/client.html
@@ -6,7 +6,17 @@
 	{{loginButtons align='right'}}
 	<h1>Plataforma LL</h1>
 	{{> welcome}}
-	<IMG id = "imagen" SRC="angrybirds.jpg">
+	<!--<IMG id = "imagen" SRC="angrybirds.jpg" border="8">-->
+	
+
+    <div id="container">
+        <div id="coin-slider">
+            <a> <IMG  SRC="angrybirds.jpg" border="8"> </a>
+            <a> <IMG  SRC="carcassonne.jpg" border="8"> </a>
+            <a> <IMG  SRC="alieninvasion.png" border="8"> </a>
+        </div>
+    </div>
+
 	
 </body>
 
