--- a/iu_carcassone/iu_carcassone.html
+++ b/iu_carcassone/iu_carcassone.html
@@ -1,13 +1,23 @@
 <head>
-  <title>iu_carcassone</title>
+	<title>iu_carcassone</title>
+	<meta charset="UTF-8"/>
+	<link rel="stylesheet" href="base.css" type="text/css" />
+	<script src='jquery-1.10.2.js' type='text/javascript'></script>
 </head>
 
 <body>
-  {{> hello}}
+	<div id='container'>
+    	<canvas id='game' width='320' height='480'></canvas>
+ 	</div>
+  	<script src='game.js'></script>
+  {{>carcassone}}
 </body>
 
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
+<template name="carcassone">
+  <h1>Welcome Carcassone!</h1>
+   {{greeting}}
 </template>
+
+
+
+
