Modificado estilo del boton de registro

--- a/prototipo-1/client/client.html
+++ b/prototipo-1/client/client.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-	{{loginButtons align='right'}}
+	<div id="div-login-button">{{loginButtons}}</div>
 	<h1>Plataforma LL</h1>
 	{{> welcome}}
 	
