Añadido logo de clarcassone en footer y top (después se añadirá el logo de la página) y creación de algunos elementos de los menús usuario y general

--- a/client/client.html
+++ b/client/client.html
@@ -1,19 +1,15 @@
 <head>
 
-<title>ISI</title>
-
-<link rel="shortcut icon" href="http://para.llel.us/favicon.ico" />
-
-
-<link rel="stylesheet" type="text/css" href="css/menu.css" />
-<link rel="stylesheet" type="text/css" href="css/default.css" />
+	<title>ISI Pakistán Gaming</title>
+	<link rel="shortcut icon" href="http://para.llel.us/favicon.ico" />
+	<link rel="stylesheet" type="text/css" href="css/menu.css" />
+	<link rel="stylesheet" type="text/css" href="css/default.css" />
 
 </head>
 
-
-
 <body>
 	<div class="home">
+
 		<!-- BEGIN: Top -->
 		<a name="top" class="hidden"></a>
 		<div id="top">
@@ -24,19 +20,20 @@
 						alt="Login to your account." /></a>
 
 				</div>
-				<a href="#">Home</a> <a href="#">Portfolio</a> <a href="#">Blog</a>
-				<a href="#">Contact</a>
+				<a href="#">Mi perfil</a> 
+				<a href="#">Mi clan</a> 
+				<a href="#">Configuración de mi cuenta</a> 
 			</div>
 		</div>
 		<!-- END: Top -->
 
 		<div id="main">
 			<div id="main-content">
+
 				<!-- BEGIN: Header -->
 				<div id="header">
 
-					<a href="" id="logo"> <img src="images/logo.png" width="283"
-						height="66" alt="ISI Pakistan" /></a>
+					<a href="" id="logo"> <img src="images/logo.png" alt="ISI Pakistan" /></a>
 
 					{{> main_menu}}
 
@@ -44,6 +41,7 @@
 
 				</div>
 				<!-- END: Header -->
+
 			</div>
 
 			<!-- BEGIN: Body -->
@@ -56,23 +54,18 @@
 			<!-- END: Chat Global -->
 
 			<!-- END: Body -->
-
 			
-			{{> torneos}}
-			
-			
+			{{> torneos}}			
 			
 		</div>
 	</div>
-
-
 
 
 	<!-- BEGIN: Footer -->
 	<div id="footer">
 		<div id="footer-content">
 			<a href="" id="logo-footer"><img
-				src="images/logo-footer.gif"
+				src="images/logo.png"
 				alt="ISI-Pakistan" /></a>
 			<div>
  				Una descripcion de lo chula que es nuestra pagina, y quien la hizo(la hizo un erizo).
@@ -80,6 +73,7 @@
 		</div>
 	</div>
 	<!-- END: Footer -->
+
 </body>
 
 
