--- a/client/chat.html
+++ b/client/chat.html
@@ -1,7 +1,7 @@
 <!-- BEGIN: Template -->
 
 <!-- Begin: Templates Chat global -->
-<template name="msgs_gbl">
+<template name="gblmsgs">
 	<h1>Chat global</h1>
 	<div id="msgs">
 		{{#each msgs}}
@@ -11,7 +11,7 @@
 	</div>
 </template>
 
-<template name="input">
+<template name="wrmsg">
 	<div id="wr_msg">
 		Mensaje: <input type="text" id="msg"> <input type="button"
 			id="sendmsg" value="Enviar">
