--- a/client/client.html
+++ b/client/client.html
@@ -50,8 +50,8 @@
 
 			<!-- BEGIN: Chat Global -->
 			<div id="gbl-chat">
- 	  			{{> msgs_gbl}}
-  				{{> input}}
+ 	  			{{> gblmsgs}}
+  				{{> wrmsg}}
   			</div>
 			<!-- END: Chat Global -->
 
