--- a/iu_carcassone/iu_carcassone.html
+++ b/iu_carcassone/iu_carcassone.html
@@ -10,6 +10,7 @@
     	<canvas id='game' width='800' height='600'></canvas>
  	</div>
   	<script src='game.js'></script>
+  	<script src='engine.js'></script>
   {{>carcassone}}
 </body>
 
