Adaptación del menú de user en top con plantillas meteor

--- a/client/_index.html
+++ b/client/_index.html
@@ -20,9 +20,9 @@
 						alt="Login to your account." /></a>
 
 				</div>
-				<a href="#">Mi perfil</a> 
-				<a href="#">Mi clan</a> 
-				<a href="#">Configuración de mi cuenta</a> 
+
+				{{> user_menu}}
+				
 			</div>
 		</div>
 		<!-- END: Top -->
