--- a/prototipo-1/client/client.html
+++ b/prototipo-1/client/client.html
@@ -13,7 +13,6 @@
     <div id="container">
         {{> coin}}
 			{{> tabstemp}}
-			{{> userstemp}}
     </div>
 </body>
 
@@ -33,12 +32,12 @@
 	
 		<!-- estructura de pestañas -->
 		<ul>
-			<li><a href="#usuarios">Usuarios</a></li>
+			<li><a href="#amigos">Amigos</a></li>
 			<li><a href="#juegos">Juegos</a></li>
 		</ul>
 		
 		<!-- se respeta el nombre para indicar el contenido de cada pestaña -->
-		<div id="usuarios"></div>
+		<div id="amigos"> {{> userstemp}} </div>
       <div id="juegos"></div>
 		
 	</div>
