añadido el paquete password y el login

--- a/client/_index.html
+++ b/client/_index.html
@@ -14,17 +14,12 @@
 		<a name="top" class="hidden"></a>
 		<div id="top">
 			<div id="top-content">
-				<div id="top-content-icons">
-					<a href="#" class="login"><img src="images/icon-login.gif"
-						width="92" height="35" title="Login to your account."
-						alt="Login to your account." /></a>
-
-				</div>
-
 				{{> user_menu}}
-				
 			</div>
 		</div>
+		 <div id="registro">
+					{{>registro}}
+				</div>
 		<!-- END: Top -->
 
 		<div id="main">
