--- a/prototipo-2/client/client.html
+++ b/prototipo-2/client/client.html
@@ -21,7 +21,7 @@
 
 <template name="coin">
 	<div id="coin-slider">
-            <a> <IMG  SRC="angrybirds.jpg" border="8"> </a>
+            <a> <IMG  SRC="angrybirds.jpg" margin: auto> </a>
             <a> <IMG  SRC="carcassonne.jpg" border="8"> </a>
             <a> <IMG  SRC="alieninvasion.png" border="8"> </a>   
    </div>
