Cambiar el nobmre de current_main por current_stage que es mas intuitivo

--- a/client/_index.html
+++ b/client/_index.html
@@ -1,5 +1,13 @@
 <head>
-
+	<!-- Metadatos para describir la pagina, para google y otros xD -->
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="author" content="ISI Pakistan" />
+	<meta name="description" content="Plataforma para juegos iteractivos" />
+	<meta name="keywords" content="game urjc isi blutbad tururu" />
+		
+	
+	
+	<!-- Scripts -->
 	<title>ISI Pakistán Gaming</title>
 	<link rel="shortcut icon" href="http://para.llel.us/favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="css/menu.css" />
