--- a/prototipo-2/client/client.html
+++ b/prototipo-2/client/client.html
@@ -20,11 +20,12 @@
 
 
 <template name="coin">
-	<div id="coin-slider">
-            <a> <IMG  SRC="angrybirds.jpg" margin: auto> </a>
-            <a> <IMG  SRC="carcassonne.jpg" border="8"> </a>
-            <a> <IMG  SRC="alieninvasion.png" border="8"> </a>   
-   </div>
+    <div id="coin-slider">
+        <a> <IMG  SRC="angrybirds.jpg"> </a>
+        <a> <IMG  SRC="carcassonne.jpg"> </a>
+        <a> <IMG  SRC="alieninvasion.png"> </a>   
+    </div>
+
 </template>
 
 <template name="tabstemp">
