--- a/client/_index.html
+++ b/client/_index.html
@@ -1,65 +1,59 @@
 <head>
-	<!-- Metadatos para describir la pagina, para google y otros xD -->
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="author" content="ISI Pakistan" />
-	<meta name="description" content="Plataforma para juegos iteractivos" />
-	<meta name="keywords" content="game urjc isi blutbad tururu" />
-		
-	
-	
-	<!-- Scripts -->
-	<title>ISI Pakistán Gaming</title>
-	<link rel="shortcut icon" href="http://para.llel.us/favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="css/menu.css" />
-	<link rel="stylesheet" type="text/css" href="css/default.css" />
+<!-- Metadatos para describir la pagina, para google y otros xD -->
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="author" content="ISI Pakistan" />
+<meta name="description" content="Plataforma para juegos iteractivos" />
+<meta name="keywords" content="game urjc isi blutbad tururu" />
+
+
+
+<!-- Scripts -->
+<title>ISI Pakistán Gaming</title>
+<link rel="shortcut icon" href="http://para.llel.us/favicon.ico" />
+<link rel="stylesheet" type="text/css" href="css/menu.css" />
+<link rel="stylesheet" type="text/css" href="css/default.css" />
 
 </head>
 
 <body>
-	<div class="home">
 
-		<!-- BEGIN: Top -->
-		<a name="top" class="hidden"></a>
-		<div id="top">
-			<div id="top-content">
-				{{> user_menu}}
+		<div id="wrapper">
+			<!-- BEGIN: Top -->
+			<a name="top" class="hidden"></a>
+			<div id="top">
+				<div id="top-content">{{> user_menu}}</div>
 			</div>
-		</div>
-		
-		 <div id="registro">
-					{{>registro}}
-		</div>
-		
-		<!-- END: Top -->
 
-		<div id="main">
-			
-			{{>menu}}
+			<div id="registro">{{>registro}}</div>
 
-			
+			<!-- END: Top -->
 
-			<!-- END: Body -->
-			{{> dashboard}}
-			{{> torneos}}			
-			{{> juegos}}
-			{{> ranking}}
-			{{> comunidad}}	
-		</div>
-	</div>
+			<div id="main">
+				<div id="main-content">
+					{{>menu}}
 
 
-	<!-- BEGIN: Footer -->
-	<div id="footer">
-		<div id="footer-content">
-			<a href="" id="logo-footer"><img
-				src="images/logo.png"
-				alt="ISI-Pakistan" /></a>
-			<div>
- 				Una descripcion de lo chula que es nuestra pagina, y quien la hizo(la hizo un erizo).
+
+					<!-- END: Body -->
+					{{> dashboard}} {{> torneos}} {{> juegos}} {{> ranking}} 
+					{{> comunidad}} {{> gamecontainer}} 
+				</div>
+
 			</div>
+
+			<!-- BEGIN: Footer -->
+			<div id="footer">
+				<div id="footer-content">
+					<a href="" id="logo-footer"><img src="images/logo.png"
+						alt="ISI-Pakistan" /></a>
+					<div>Una descripcion de lo chula que es nuestra pagina, y
+						quien la hizo(la hizo un erizo).</div>
+				</div>
+			</div>
+			<!-- END: Footer -->
+
 		</div>
-	</div>
-	<!-- END: Footer -->
+
 
 </body>
 
