--- a/prototipo-2/client/client.html
+++ b/prototipo-2/client/client.html
@@ -5,7 +5,6 @@
 <body>
 	<div id="div-login-button">{{loginButtons}}</div>
 	<h1 id="titulo">Plataforma LL</h1>
-	{{> provisional}}
 	<p> Welcome to LowerLayers Games! </p>
     <div id="container">
         {{> cointemp}}
@@ -30,11 +29,13 @@
 	<div id="tabs" >
 		<ul>
 			<li><a href="#amigos">Amigos</a></li>
+			<li><a href="#chat">Chat</a></li>
 			<li><a href="#juegos">Juegos</a></li>
 		</ul>
 		
 		<div id="amigos"> {{> userstemp}} </div>
-      <div id="juegos"></div>
+		<div id="chat"> {{> loguserstemp}}{{> input}}{{> messages}} </div>
+        <div id="juegos"></div>
 		
 	</div>
 </template>
@@ -42,26 +43,27 @@
 <template name="userstemp">
 	<div id="users" >
 		{{# each users}}
-				{{username}}
+				<p>{{username}}</p>
 		{{/each}}
-		{{> input}}
-	   {{> messages}}
 	</div>
 </template>
 
 <template name="input">
-	<p> Message: <input type="text" id="message"></p>
+	<p> Mensaje: <input type="text" id="message"></p>
 </template>
 
 <template name="messages">
-	{{#each messages}}
-		<strong>{{name}}:</strong>{{message}}
-	{{/each}}
+	<div id="messages">
+		{{# each messages}}
+			<i>{{name}}: {{message}}</i></br>
+		{{/each}}
+	</div>
 </template>
 
-<template name="provisional">
-	LISTA CONECTADOS:
-	{{# each conectados}}
-		{{username}}
-	{{/ each}}
+<template name="loguserstemp">
+	<div id="logusers">
+		{{# each conectados}}
+			{{username}}
+		{{/ each}}
+	</div>
 </template>
