--- a/prototipo-2/client/client.html
+++ b/prototipo-2/client/client.html
@@ -6,12 +6,11 @@
 	<div id="div-login-button">{{loginButtons}}</div>
 	<h1 id="titulo">Plataforma LL</h1>
 	<p> Welcome to LowerLayers Games! </p>
-    <div id="container">
-        {{> cointemp}}
+   <div id="container">
+   	{{> cointemp}}
 		{{> tabstemp}}
-    </div>
+   </div>
 </body>
-
 
 
 
@@ -35,7 +34,7 @@
 		
 		<div id="amigos"> {{> userstemp}} </div>
 		<div id="chat"> {{> loguserstemp}}{{> input}}{{> messages}} </div>
-        <div id="juegos"></div>
+      <div id="juegos">{{> gamestemp}}</div>
 		
 	</div>
 </template>
@@ -64,6 +63,14 @@
 	<div id="logusers">
 		{{# each conectados}}
 			{{username}}
+		{{/ each}}
+	</div>
+</template>
+
+<template name="gamestemp">
+	<div id="games">
+		{{# each games}}
+			<p>{{game}}</p>
 		{{/ each}}
 	</div>
 </template>
