div del contenido de la pagina

--- a/client/_index.html
+++ b/client/_index.html
@@ -38,6 +38,12 @@
 			<div id="main">
 				<div id="main-content">
 					{{>menu}}
+<div id="page">
+	<div id="page-top-gap"></div>
+	<div id="page-content">
+
+		<!-- BEGIN: Page content -->
+
 
 
 
@@ -47,7 +53,8 @@
 				</div>
 
 			</div>
-
+			</div>
+				</div>
 			<!-- BEGIN: Footer -->
 			<div id="footer">
 				<div id="footer-content">
