--- a/prototipo-3/client/client.html
+++ b/prototipo-3/client/client.html
@@ -34,7 +34,7 @@
 		
 		<div id="amigos"> {{> userstemp}} </div>
 		<div id="chat"> {{> loguserstemp}}{{> input}}{{> messagestemp}} </div>
-    	<div id="juegos">{{> gamestemp}}</div>
+    	<div id="juegos">{{> gamestemp}} {{> matchestemp}}</div>
 	</div>
 </template>
 
@@ -88,6 +88,14 @@
 <template name="gamestemp">
 	<div id="games">
 		{{# each games}}
+			<a href="#" class="linkgame">{{name}}</a>
+		{{/ each}}
+	</div>
+</template>
+
+<template name="matchestemp">
+	<div id="matches">
+		{{# each matches}}
 			<p>{{name}}</p>
 		{{/ each}}
 	</div>
