Implementadas listas de partidas selectivas por juego, creador de partidas para un juego, e inicialización de las bases de datos de los juegos que no están creadas

--- a/prototipo-3/client/client.html
+++ b/prototipo-3/client/client.html
@@ -91,12 +91,19 @@
 			<a href="#" class="linkgame">{{name}}</a>
 		{{/ each}}
 	</div>
+
 </template>
 
 <template name="matchestemp">
 	<div id="matches">
-		{{# each matches}}
-			<p>{{name}}</p>
-		{{/ each}}
+		<table>
+			{{# each matches}}
+				<tr>
+					<td><a href="#">{{name}}</a></td><td> - {{created}}</td>
+				</tr>
+			{{/ each}}
+		</table>
+		<p> Nueva partida: <input type="text" id="match_creator"></p>
+		<p><a href="#" id="match_back">Atrás</a></p>
 	</div>
 </template>
