--- a/prototipo-3/client/client.html
+++ b/prototipo-3/client/client.html
@@ -1,16 +1,17 @@
 <head>
-	<title>Plataforma LL</title>
+	<title>X-ADrian</title>
 </head>
 
 <body>
 	<div id="div-login-button">{{loginButtons}}</div>
-	<h1 id="titulo" ><FONT Size="7">Plataforma LL</FONT></h1>
-	<p> Welcome to LowerLayers Games! </p>
+	<h1 id="titulo" ><FONT Size="7">X-ADrian</FONT></h1>
+	<p> Welcome to X-ADrian Games! </p>
    	<div id="container">
    		{{> cointemp}}
 		{{> tabstemp}}
 		{{> friendsTemp}}
    	</div>
+
 </body>
 
 
@@ -39,11 +40,12 @@
 </template>
 
 <template name="friendsTemp">
-	
 		
 		<div id="accordion">
 			<h3>Amigos</h3>
 				<div>
+					<p>lista amigos</p>
+					<p>lista amigos</p>
 					<p>lista amigos</p>
 				</div>
 			<h3>Buscar</h3>
