--- a/client/_index.html
+++ b/client/_index.html
@@ -21,8 +21,8 @@
 <link rel="stylesheet" href="/resources/demos/style.css">
 <link href="css/jquery-ui-1.10.3.custom.css" rel="stylesheet">
 
-  <!--<link type="text/css" href="../public/jquery.ui.chatbox.css" rel="stylesheet" />
-  <script type="text/javascript" src="js/jquery.ui.chatbox.js"></script>-->
+<link type="text/css" href="client/compatibility/chatbox/jquery.ui.chatbox.css" rel="stylesheet" />
+<script type="text/javascript" src="client/compatibility/chatbox/jquery.ui.chatbox.js"></script>
 </head>
 
 <body>
@@ -55,10 +55,7 @@
 					{{> comunidad}} {{> gamecontainer}} 
 
 					<!-- BEGIN: Chat Global -->
-					<!-- <div id="gbl-chat"> -->
-					{{> chat}}
-					
-					<!-- </div> -->
+					{{> gchat}}
 					<!-- END: Chat Global -->
 
 				</div>
