Añadido favicon de la página

--- a/client/_index.html
+++ b/client/_index.html
@@ -7,7 +7,7 @@
 
 	<!-- Scripts -->
 	<title>ISI Pakistán Gaming</title>
-	<link rel="shortcut icon" href="http://para.llel.us/favicon.ico" />
+	<link rel="shortcut icon" href="public/images/favicon.png" />
 	<link rel="stylesheet" type="text/css" href="css/menu.css" />
 	<link rel="stylesheet" type="text/css" href="css/default.css" />
 
