--- a/client/_index.html
+++ b/client/_index.html
@@ -60,7 +60,7 @@
 	<div id="footer">
 		<div id="footer-content">
 			<a href="" id="logo-footer">
-				<img src="images/logo.png" alt="ISI-Pakistan" />
+				<img src="images/games_logo/clarkasone.jpg" alt="ISI-Pakistan" />
 			</a>
 			<div>Una descripcion de lo chula que es nuestra pagina, y
 				quien la hizo(la hizo un erizo).
