Añadir límite de jugadores, salir de la sala de juego

--- a/prototipo-3/client/client.html
+++ b/prototipo-3/client/client.html
@@ -32,7 +32,7 @@
 			<li><a href="#juegos">Juegos</a></li>
 		</ul>
 		<div id="amigos"> {{> userstemp}} </div>
-    	<div id="juegos">{{> gamestemp}} {{> matchestemp}} {{> input}} {{> messagestemp}} {{> canvastemp}}</div>
+    	<div id="juegos">{{> gamestemp}} {{> matchestemp}} {{> roomgametemp}}</div>
 	</div>
 </template>
 
@@ -98,6 +98,7 @@
 
 <template name="matchestemp">
 	<div id="matches">
+		{{> gamenametemp}}
 		<table>
 			{{# each matches}}
 				<tr>
@@ -110,6 +111,19 @@
 	</div>
 </template>
 
-<template name="canvastemp">
-	<canvas id='game' width='320' height='480'></canvas>
+<template name="alientemp">
+	<div id="aliencontainer">
+		<canvas id='aliencanvas' width='320' height='480'></canvas>
+	</div>
+</template>
+
+<template name="roomgametemp">
+	<div id="roomcontainer">
+		<a href="#" id="exitgame"> Salir </a>
+		{{> input}} {{> messagestemp}} {{> alientemp}}
+	</div>
+</template>
+
+<template name="gamenametemp">
+	<h1>{{gamename}}</h1>
 </template>
