Añadido agregar,buscar y borrar amigos para chatear o invitar a partidas. Añadiendo en la colecion user un campo amigos

--- a/prototipo-3/client/client.html
+++ b/prototipo-3/client/client.html
@@ -47,7 +47,8 @@
 				</div>
 			<h3>Buscar</h3>
 				<div>
-					<p>Buscar</p>
+					<input type="text" id="formSearch">
+					<input type="button" id="buttonSearch" value="Buscar"/>
 				</div>
 		</div>
 		<a id="friends" class="escondido" style="cursor:pointer;" >
