Cuando un usuario se apunta a un torneo mantener el botón pulsado (cambiando el estilo) según una variable de sesión; si vuelve a pulsar no afectará al estilo y no se añadirá otra vez a la lista de usuarios apuntados; puede apuntarse a todos los torneos si quiere

--- a/client/_index.html
+++ b/client/_index.html
@@ -20,6 +20,7 @@
 	<!-- Referencias al paquete Chatbox -->
 	<link type="text/css" href="/chatbox/jquery.ui.chatbox.css" rel="stylesheet" />
 	<script type="text/javascript" src="/chatbox/jquery.ui.chatbox.js"></script>
+  	<script type="text/javascript" src="http://underscorejs.org/underscore.js"></script>
 </head>
 
 <body>
