--- a/client/_index.html
+++ b/client/_index.html
@@ -17,9 +17,6 @@
 	<link rel="stylesheet" href="/resources/demos/style.css">
 	<link href="css/jquery-ui-1.10.3.custom.css" rel="stylesheet">
 
-	<!-- Referencias al paquete Chatbox -->
-	<link type="text/css" href="/chatbox/jquery.ui.chatbox.css" rel="stylesheet" />
-	<script type="text/javascript" src="/chatbox/jquery.ui.chatbox.js"></script>
 </head>
 
 <body>
@@ -48,7 +45,7 @@
 						{{> ranking}} 
 						{{> comunidad}} 
 						{{> gamecontainer}}
-						{{> gchat}}
+						{{> chat}}
 					</div>
 				</div>
 			</div>
