parte del perfil queda que se puedan guardar los cambios y sacar puntuaciones, amigos y demas de la base de datos

--- a/client/_index.html
+++ b/client/_index.html
@@ -17,6 +17,8 @@
 	<link rel="stylesheet" href="/resources/demos/style.css">
 	<link href="css/jquery-ui-1.10.3.custom.css" rel="stylesheet">
 
+  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+
 	<!-- Referencias al paquete Chatbox -->
 	<link type="text/css" href="/chatbox/jquery.ui.chatbox.css" rel="stylesheet" />
 	<script type="text/javascript" src="/chatbox/jquery.ui.chatbox.js"></script>
@@ -50,7 +52,7 @@
 						{{> comunidad}} 
 						{{> gamecontainer}}
 						{{> gchat}}
-						{{>profile}}
+						{{>profil}}
 					</div>
 				</div>
 			</div>
