--- a/prototipo-4/client/client.html
+++ b/prototipo-4/client/client.html
@@ -12,9 +12,7 @@
 		{{> tabstemp}}
 		{{> friendsTemp}}
 		{{> chatsTabsTemp}}
-   	</div>
-
-   	
+   </div>	
 
 </body>
 
@@ -32,11 +30,11 @@
 <template name="tabstemp">
 	<div id="tabs" >
 		<ul>
-			<li><a href="#usuarios">Usuarios</a></li>
 			<li><a href="#juegos">Juegos</a></li>
+			<li><a href="#ranking">Ranking</a></li>
 		</ul>
-		<div id="usuarios"> {{> userstemp}} </div>
-    	<div id="juegos">{{> gamestemp}} {{> matchestemp}} {{> roomgametemp}}</div>
+		<div id="juegos">{{> gamestemp}} {{> matchestemp}} {{> roomgametemp}}</div>
+		<div id="ranking">Por juegos:{{> gamestemp}} Por Usuarios: {{> userstemp}} </div>
 	</div>
 </template>
 
@@ -73,7 +71,7 @@
 <template name="userstemp">
 	<div id="users" >
 		{{# each users}}
-			<p>{{username}}</p>
+			<a href="#">{{username}}</a>
 		{{/each}}
 	</div>
 </template>
@@ -137,10 +135,37 @@
 	</div>
 </template>
 
+<template name="frootwarstemp">
+	<div id="frootwarscontainer">
+		<canvas id="gamecanvas" width="640" height="480" class="gamelayer"></canvas>
+  		<div id="scorescreen" class="gamelayer">
+    		<img id="togglemusic" src="images/icons/sound.png" onclick="game.toggleBackgroundMusic();">
+    		<img src="images/icons/prev.png" onclick="game.restartLevel();">
+    		<span id="score">Score: 0</span>
+  		</div>
+  		<div id="gamestartscreen" class="gamelayer">
+    		<img src="images/icons/play.png" alt="Play Game" onclick = "game.showLevelScreen();"><br>
+    		<img src="images/icons/settings.png" alt="Settings">
+  		</div>
+  		<div id="levelselectscreen" class="gamelayer"></div>
+  		<div id="loadingscreen" class="gamelayer">
+   		<div id="loadingmessage"></div>
+  		</div>
+  		<div id="endingscreen" class="gamelayer">
+   		<div>
+   	   	<p id="endingmessage">The Level Is Over Message</p>
+   	   	<p id="playcurrentlevel" onclick="game.restartLevel();"><img src="images/icons/prev.png"> Replay Current Level</p>
+   	   	<p id="playnextlevel" onclick="game.startNextLevel();"><img src="images/icons/next.png"> Play Next Level </p> 
+      		<p id="returntolevelscreen"onclick="game.showLevelScreen();"><img src="images/icons/return.png"> Return to Level Screen</p>
+    		</div>
+  		</div>
+	</div>
+</template>
+
 <template name="roomgametemp">
 	<div id="roomcontainer">
 		<a style ="cursor:pointer;text-decoration:underline;" id="exitgame"> Salir </a>
-		{{> roomchattemp}} {{> alientemp}}
+		{{> roomchattemp}} {{> alientemp}} {{> frootwarstemp}}
 	</div>
 </template>
 
