Puede que se haya añadido el botón like de Facebook.

--- a/prototipo-4/client/client.html
+++ b/prototipo-4/client/client.html
@@ -3,8 +3,17 @@
 </head>
 
 <body>
+        <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 	<div id="div-login-button">{{loginButtons}}</div>
 	<div id="titulo" Size="6">X-ADrian</div>
+	<div class="fb-like" data-href="http://lowerlayers.meteor.com/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 	<div id="subtitulo">&nbsp&nbsp&nbsp Welcome to X-ADrian platform</div><br>
 	<div id="container">
    		{{> cointemp}}
@@ -24,6 +33,7 @@
 		    <IMG  SRC="alieninvasion.png">
 		</div>
 	</div>
+	
 </template>
 
 <template name="tabstemp">
@@ -103,11 +113,13 @@
 	</div>
 </template>
 
-<template name="gamestemp">
+<template name="gamestemp" >
 	<div id="games">
 		{{# each games}}
 			<a style ="cursor:pointer;text-decoration:underline;" class="linkgame">{{name}}</a><br>
 			<IMG  SRC ={{name}} class="linkgame"><br>
+			<div class="fb-like" data-href="http://localhost:3000" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+			
 		{{/ each}}
 	</div>
 
