Lista de los jugadores que estan en el hall de clarkasone esparando una partida

--- a/client/_index.html
+++ b/client/_index.html
@@ -7,9 +7,9 @@
 
 	<!-- Scripts -->
 	<title>ISI Pakistán Gaming</title>
-	<link rel="shortcut icon" href="public/images/favicon.png" />
-	<link rel="stylesheet" type="text/css" href="css/menu.css" />
-	<link rel="stylesheet" type="text/css" href="css/default.css" />
+	<link rel="shortcut icon" href="/public/images/favicon.png" />
+	<link rel="stylesheet" type="text/css" href="/css/menu.css" />
+	<link rel="stylesheet" type="text/css" href="/css/default.css" />
 
 	<!-- para torneos-->
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
@@ -47,6 +47,7 @@
 						{{> gamecontainer}}
 						{{> chat}}
 						{{>profil}}
+						{{>hall_clarcassone}}
 					</div>
 				</div>
 			</div>
@@ -58,7 +59,7 @@
 	<div id="footer">
 		<div id="footer-content">
 			<a href="" id="logo-footer">
-				<img src="images/games_logo/clarkasone.jpg" alt="ISI-Pakistan" />
+				<img src="/images/games_logo/clarkasone.jpg" alt="ISI-Pakistan" />
 			</a>
 			<div>Una descripcion de lo chula que es nuestra pagina, y
 				quien la hizo(la hizo un erizo).
