--- a/indexPruebas.html
+++ b/indexPruebas.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <title>Pruebas Clarcasone Integración</title>
+  <title>Pruebas Clarcasone IA</title>
   <link rel="stylesheet" href="base.css" type="text/css" />
   <script src='jquery-1.10.2.js' type='text/javascript'></script>
   <script src='underscore.js' type='text/javascript'></script>
 </head>
 <body>
   <div id='container'>
-  		Pruebas Integracion
+  		Pruebas IA
   </div>
-  <script src='game.js'></script>	
+  <script src='pruebas.js'></script>	
   <script src='engine.js'></script>
 </body>
 </html>
