--- a/client/client.html
+++ b/client/client.html
@@ -5,6 +5,13 @@
 <body>
 	<div id='container'>
     	<canvas id='game' width='800' height='600'></canvas>
+    	<audio id="sonidojuego">
+    		<source src="audio/Kalimba_converted.ogg" type="audio/ogg"/>
+    	</audio>
+    	<audio id="sonido_ladron">
+    		<source src="audio/ladron.ogg" type="audio/ogg"/>
+   		</audio>
+   		
  	</div>
 </body>
 
