editada musica del juego

--- a/client/client.html
+++ b/client/client.html
@@ -6,12 +6,20 @@
 	<div id='container'>
     	<canvas id='game' width='800' height='600'></canvas>
     	<audio id="sonidojuego">
-    		<source src="audio/Kalimba_converted.ogg" type="audio/ogg"/>
+    		<source src="audio/won2.ogg" type="audio/ogg"/>
     	</audio>
     	<audio id="sonido_ladron">
     		<source src="audio/ladron.ogg" type="audio/ogg"/>
    		</audio>
-   		
+   		<audio id = "sonido_granjero">
+   			<source src="audio/Gallo.ogg" type="audio/ogg"/>
+   		</audio>
+   		<audio id= "sonido_caballero">
+   			<source src="audio/HORSES.ogg" type="audio/ogg"/>
+   		</audio>
+   		<audio id="sonido_monje">
+   			<source src="audio/30_Wololo.ogg" type="audio/ogg"/>
+   		</audio>
  	</div>
 </body>
 
