editada musica de la ficha y arreglada funcion setseguidor para poner y parar musica

--- a/client/client.html
+++ b/client/client.html
@@ -20,6 +20,9 @@
    		<audio id="sonido_monje">
    			<source src="audio/30_Wololo.ogg" type="audio/ogg"/>
    		</audio>
+   		<audio id="sonido_ficha">
+   			<source src=audio/GONG4.ogg" type = "audio/ogg"/>
+   		</audio>
  	</div>
 </body>
 
