Dividido engine en subficheros

--- a/IA-Clarcassonne/indexPruebas.html
+++ b/IA-Clarcassonne/indexPruebas.html
@@ -13,5 +13,8 @@
   </div>
   <script src='pruebas.js'></script>	
   <script src='engine.js'></script>
+  <script src='cierraCamino.js'></script>
+  <script src='cierraCastillo.js'></script>
+  <script src='cierraClaustro.js'></script>
 </body>
 </html>
