--- a/IU-Clarcassonne/client/client.html
+++ b/IU-Clarcassonne/client/client.html
@@ -6,22 +6,22 @@
 	<div id='container'>
     	<canvas id='game' width='800' height='600'></canvas>
     	<audio id="sonidojuego">
-    		<source src="audio/won2.ogg" type="audio/ogg"/>
+    		<source src="Clarcassonne/audio/won2.ogg" type="audio/ogg"/>
     	</audio>
     	<audio id="sonido_ladron">
-    		<source src="audio/ladron.ogg" type="audio/ogg"/>
+    		<source src="Clarcassonne/audio/ladron.ogg" type="audio/ogg"/>
    		</audio>
    		<audio id = "sonido_granjero">
-   			<source src="audio/Gallo.ogg" type="audio/ogg"/>
+   			<source src="Clarcassonne/audio/Gallo.ogg" type="audio/ogg"/>
    		</audio>
    		<audio id= "sonido_caballero">
-   			<source src="audio/HORSES.ogg" type="audio/ogg"/>
+   			<source src="Clarcassonne/audio/HORSES.ogg" type="audio/ogg"/>
    		</audio>
    		<audio id="sonido_monje">
-   			<source src="audio/30_Wololo.ogg" type="audio/ogg"/>
+   			<source src="Clarcassonne/audio/30_Wololo.ogg" type="audio/ogg"/>
    		</audio>
    		<audio id="sonido_ficha">
-   			<source src=audio/GONG4.ogg" type = "audio/ogg"/>
+   			<source src="Clarcassonne/audio/GONG4.ogg" type = "audio/ogg"/>
    		</audio>
  	</div>
 </body>
