--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -176,6 +176,24 @@
 <template name="clarcassonnetemp">
         <div id="clarcassonnecontainer">
                 <canvas id='clarcassonnecanvas' width='800' height='600'></canvas>
+				<audio id="sonidojuego">
+				<source src="audio/won2.ogg" type="audio/ogg"/>
+				</audio>
+				<audio id="sonido_ladron">
+					<source src="audio/ladron.ogg" type="audio/ogg"/>
+		   		</audio>
+		   		<audio id = "sonido_granjero">
+		   			<source src="audio/Gallo.ogg" type="audio/ogg"/>
+		   		</audio>
+		   		<audio id= "sonido_caballero">
+		   			<source src="audio/HORSES.ogg" type="audio/ogg"/>
+		   		</audio>
+		   		<audio id="sonido_monje">
+		   			<source src="audio/30_Wololo.ogg" type="audio/ogg"/>
+		   		</audio>
+		   		<audio id="sonido_ficha">
+		   			<source src="audio/GONG4.ogg" type = "audio/ogg"/>
+		   		</audio>
         </div>
 </template>
 
