--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -174,7 +174,7 @@
 </template>
 
 <template name="clarcassonnetemp">
-        <div id="clarcassonnecontainer">
+        <div id="clarcassonnecontainer" >
                 <canvas id='clarcassonnecanvas' width='800' height='600'></canvas>
 				<audio id="sonidojuego">
 				<source src="audio/won2.ogg" type="audio/ogg"/>
@@ -200,7 +200,7 @@
 <template name="roomgametemp">
 	<div id="roomcontainer">
 		<a style ="cursor:pointer;text-decoration:underline;" id="exitgame"> Salir </a>
-		<h1>{{> gamenametemp}} - {{> matchnametemp}}</h1> {{> roomplayerstemp}} {{> roomchattemp}} {{> alientemp}} {{> frootwarstemp}} {{> clarcassonnetemp}}
+		<h1>{{> gamenametemp}}  {{> matchnametemp}}</h1>  {{> roomplayerstemp}}  {{> roomchattemp}} {{> alientemp}} {{> frootwarstemp}} {{> clarcassonnetemp}}
 	</div>
 </template>
 
