Colocación óptima de los ficheros css de los juegos, chat, solución de diferentes bugs correspondiente a los css y referencias en local del paquete jqueryUI

--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -5,17 +5,20 @@
 	<meta name="description" content="Plataforma para juegos iteractivos" />
 	<meta name="keywords" content="game urjc isi blutbad tururu" />
 
-	<!-- Scripts -->
+	<!-- Scripts y CSS-->
 	<title>ISI Pakistán Gaming</title>
+
 	<link rel="shortcut icon" href="/public/images/favicon.png" />
+	<!-- Scripts -->
+	<script type="text/javascript" src="compatibility/jquery-ui-1.10.3.custom.js"></script>
+	<!-- CSS-->
 	<link rel="stylesheet" type="text/css" href="/css/menu.css" />
 	<link rel="stylesheet" type="text/css" href="/css/default.css" />
-
-	<!-- para torneos-->
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
-	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+	<link rel="stylesheet" type="text/css" href="/css/chat.css">
+	<link rel="stylesheet" type="text/css" href="/css/alien-invasion.css">
+	<link rel="stylesheet" type="text/css" href="/css/froot-wars.css">
 	<link rel="stylesheet" href="/resources/demos/style.css">
-	<link href="css/jquery-ui-1.10.3.custom.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="/css/css-jqueryui/cupertino/jquery-ui-1.10.3.custom.css">
 
 </head>
 
