Añadir el estado para mostar cada uno de los torneo

--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -49,8 +49,9 @@
 						{{> comunidad}} 
 						{{> gamecontainer}}
 						{{> chat}}
-						{{>profil}}
-						{{>hall_clarcassone}}
+						{{> profil}}
+						{{> hall_clarcassone}}						
+						{{> hall_torneo}}
 					</div>
 				</div>
 			</div>
