Añadir Grafica para el Perfil de usuario

--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -19,6 +19,14 @@
 	<link rel="stylesheet" type="text/css" href="/css/froot-wars.css">
 	<link rel="stylesheet" href="/resources/demos/style.css">
 	<link rel="stylesheet" type="text/css" href="/css/css-jqueryui/cupertino/jquery-ui-1.10.3.custom.css">
+	
+	
+	
+	<!-- Para las graficas  -->
+	<script src="http://code.highcharts.com/highcharts.js"></script>
+    <script src="http://code.highcharts.com/modules/exporting.js"></script>
+    
+    
 </head>
 
 <body>
