--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -59,6 +59,7 @@
 						{{> profil}}
 						{{> hall_clarcassone}}						
 						{{> hall_torneo}}
+						{{> users_connected}}
 					</div>
 				</div>
 			</div>
