Integrado ranking y act D. ER

--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -3,14 +3,6 @@
 </head>
 
 <body>
-        <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 	<div id="div-login-button">{{loginButtons}}</div>
 	<div id="titulo" Size="6">X-ADrian</div>
 	<div class="fb-like" data-href="http://lowerlayers.meteor.com/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
@@ -32,8 +24,7 @@
 		    <IMG  SRC="carcassonne.jpg">
 		    <IMG  SRC="alieninvasion.png">
 		</div>
-	</div>
-	
+	</div>	
 </template>
 
 <template name="tabstemp">
@@ -43,7 +34,7 @@
 			<li><a href="#ranking">Ranking</a></li>
 		</ul>
 		<div id="juegos">{{> gamestemp}} {{> matchestemp}} {{> roomgametemp}}</div>
-		<div id="ranking">Por juegos:{{> gamestemp}} Por Usuarios: {{> userstemp}} </div>
+		<div id="ranking">{{> gamesrankingtemp}} {{> userstemp}} {{> byuserrankingtemp}} </div>
 	</div>
 </template>
 
@@ -79,9 +70,28 @@
 
 <template name="userstemp">
 	<div id="users" >
+		Por usuarios:
 		{{# each users}}
-			<a href="#">{{username}}</a>
+			<a href="#" class="linkuserranking">{{username}}</a>
 		{{/each}}
+	</div>
+</template>
+
+<template name="gamesrankingtemp" >
+	<div id="gamesranking">
+		Por juegos:
+		{{# each games}}
+			<a style ="cursor:pointer;text-decoration:underline;" class="linkgameranking">{{name}}</a><br>
+		{{/ each}}
+	</div>
+</template>
+
+<template name="byuserrankingtemp">
+	<div id="byuserranking">
+		Juegos:
+		{{# each ranking}}
+			{{game}} {{score}}
+		{{/ each}}
 	</div>
 </template>
 
