--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -14,11 +14,11 @@
 	<!-- CSS-->
 	<link rel="stylesheet" type="text/css" href="/css/menu.css" />
 	<link rel="stylesheet" type="text/css" href="/css/default.css" />
-	<link rel="stylesheet" type="text/css" href="/css/chat.css">
-	<link rel="stylesheet" type="text/css" href="/css/alien-invasion.css">
-	<link rel="stylesheet" type="text/css" href="/css/froot-wars.css">
-	<link rel="stylesheet" href="/resources/demos/style.css">
-	<link rel="stylesheet" type="text/css" href="/css/css-jqueryui/cupertino/jquery-ui-1.10.3.custom.css">
+	<link rel="stylesheet" type="text/css" href="/css/chat.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/alien-invasion.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/froot-wars.css"/>
+	<link rel="stylesheet" href="/resources/demos/style.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/css-jqueryui/cupertino/jquery-ui-1.10.3.custom.css"/>
 	
 	
 	
@@ -59,7 +59,7 @@
 						{{> profil}}
 						{{> hall_clarcassone}}						
 						{{> hall_torneo}}
-						{{> users_connected}}
+						{{> usersConnected}}
 					</div>
 				</div>
 			</div>
