--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/menu.css" />
 	<link rel="stylesheet" type="text/css" href="/css/default.css" />
 	<link rel="stylesheet" type="text/css" href="/css/chat.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/users-connected.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/alien-invasion.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/froot-wars.css"/>
 	<link rel="stylesheet" href="/resources/demos/style.css"/>
