--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -58,6 +58,7 @@
 						{{> gamecontainer}}
 						{{> chat}}
 						{{> profil}}
+						{{> friends}}
 						{{> hall_clarcassone}}						
 						{{> hall_torneo}}
 						{{> usersConnected}}
