--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -97,11 +97,11 @@
 
 <template name="input">
 	<div id="messagecont">
-		<p> Mensaje: <input type="text" id="message"></p>
+		<p> Mensaje: <input type="text" id="message" ></p>
 	</div>
 </template>
 
-<template name="messagestemp">
+<template name="messagestemp" >
 	<div id="messages">
 		{{# each messages}}
 			<i>{{name}}: {{message}}</i></br>
@@ -109,9 +109,9 @@
 	</div>
 </template>
 
-<template name="roomchattemp">
+<template name="roomchattemp" >
 	<div id="roomchat">
-	{{> input}}{{> messagestemp}}
+		{{> input}}</br>{{> messagestemp}}
 	</div>
 </template>
 
@@ -125,11 +125,9 @@
 
 <template name="gamestemp" >
 	<div id="games">
-		{{# each games}}
+		{{# each games}}	
 			<a style ="cursor:pointer;text-decoration:underline;" class="linkgame">{{name}}</a><br>
-			<IMG  SRC ={{name}} class="linkgame"><br>
-			<div class="fb-like" data-href="http://localhost:3000" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
-			
+			<IMG  SRC =FotosPeq/{{name}} class="linkgame"><br>
 		{{/ each}}
 	</div>
 
@@ -210,7 +208,12 @@
 <template name="roomgametemp">
 	<div id="roomcontainer">
 		<a style ="cursor:pointer;text-decoration:underline;" id="exitgame"> Salir </a>
-		<h1>{{> gamenametemp}}  {{> matchnametemp}}</h1>  {{> roomplayerstemp}}  {{> roomchattemp}} {{> alientemp}} {{> frootwarstemp}} {{> clarcassonnetemp}}
+		<h1>{{> gamenametemp}}  {{> matchnametemp}}</h1>
+		{{> roomplayerstemp}}
+		<br>
+		<div id="alaputaizq"> {{> roomchattemp}} </div>
+		<div id="alaputader">{{> alientemp}} {{> frootwarstemp}} {{> clarcassonnetemp}}</div>
+		<br style="clear:both;"/>
 	</div>
 </template>
 
